<resources>
    <string name="app_name">AkhirTugas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="petunjuk_peringatan_dini">
        Pada fitur ini Anda akan memperoleh infomasi mengenai peringatan dini yang dikeluarkan oleh BPBD Kabupaten Kuningan.
        Setiap peringatan dini terbaru akan secara otomatis terkirim ke perangkat genggam Anda, hal ini ditandai dengan munculnya
        notifikasi pada aplikasi.
    </string>
    <string name="petunjuk_info_bencana">
        Pada fitur ini Anda akan memperoleh infomasi mengenai informasi bencana yang terjadi di Kabupaten Kuningan, informasi yang dikeluarkan langsung oleh BPBD Kabupaten Kuningan,
        sehingga informasi ini adalah informasi yang valid dan dapat dipertanggungjawabkan kebenarannya.
        Setiap informasi bencana terbaru akan secara otomatis terkirim ke perangkat genggam Anda, hal ini ditandai dengan munculnya
        notifikasi pada aplikasi.
    </string>
    <string name="petunjuk_laporan_masyarakat">
        Pada fitur ini Anda dapat melaporkan kejadian bencana yang terjadi disekitar Anda. Setiap laporan yang Anda kirim kepada BPBD Kabupaten Kuningan
        dapat Anda pantau prosesnya. Sehingga Anda tidak perlu khawatir atau bertanya-tanya mengenai kelanjutan laporan Anda. Setiap perubahan status laporan
        mulai dari tahap laporan masuk, validasi, proses penanganan sampai dengan selesai diprosesnya laporan yang masuk dapat Anda pantau.
    </string>
    <string name="petunjuk_jalur_evakuasi">
        Pada fitur ini Anda akan memperoleh infomasi mengenai rute atau wilayah yang akan dijadikan jalur evakuasi manakala terjadi bencana.
    </string>
    <string name="petunjuk_kerawanan">
        Pada fitur ini Anda akan memperoleh infomasi mengenai wilayah mana saja yang rawan terhadap terjadinya bencana, seperti : tanah longsor,
        banjir, kebakaran hutan dan gunung api.
    </string>
    <string name="petunjuk_diskusi">
        Pada fitur ini Anda dapat berinteraksi bersilang pendapat dan berdiskusi baik dengan pihak BPBD Kabupaten Kuningan maupun dengan masyarakat secara umum terkait kebencanaan.
    </string>
    <string name="sejarah">
        <p>Badan Penanggulangan Bencana Daerah Kabupaten Pekalongan dibentuk pada bulan Desember 2011 dengan diterbitkannya Peraturan Daerah Kabupaten Pekalongan Nomor 6 Tahun 2011 tentang Organisasi dan Tata Kerja Lembaga Teknis Daerah, Satuan Polisi Pamong Praja dan Badan Penanggulangan Bencana Daerah.
        Berdasarkan Peraturan Daerah Kabupaten Pekalongan Nomor 6 Tahun 2011 tentang Organisasi dan Tata Kerja Lembaga Teknis Daerah, Satuan Polisi Pamong Praja dan Badan Penanggulangan Bencana Daerah Bab XIV Pasal 38 disebutkan :</p>
    </string>
    <string name="satu"><p>1.	Bahwa kedudukan BPBD merupakan unsur pendukung tugas Bupati di bidang penanggulangan bencana daerah yang berkedudukan di bawah dan bertanggung jawab kepada Bupati.</p></string>
    <string name="dua"><p>2.	BPBD dipimpin oleh Kepala Badan secara ex officio dijabat oleh Sekretaris Daerah.</p></string>
    <string name="visi">“Masyarakat Kabupaten Pekalongan yang Tangguh Penanggulangan Bencana”</string>
    <string name="misi"><item>1.	Mengembangkan tata kelola penanggulangan bencana.</item></string>
    <string name="misii"><item>2.	Memperkuat kapasitas kelembagaan penanggulanan bencana.</item></string>
    <string name="misiii"><item>3.	Memberdayakan masyarakat dalam penanggulangan bencana.</item></string>
    <string name="misiiii"><item>4. Membangun kerjasama antar pemangku kepentingan dalam penanggulangan bencana.</item></string>
    <string name="title_activity_detail_berita">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_detail_longsor">ScrollingActivity</string>
    <string name="title_activity_maps">Map</string>

</resources>
